Fix #98973: Renaming Custom Python Properties is Incorrect

`PyUnicode_AsUTF8AndSize` is used when renaming a custom python property,
this method stores the size of the string without including the null
terminator in the size.

Renaming a custom python property now includes the null terminator when
copying the new string name.